cmake_minimum_required(VERSION 2.8.11)

add_subdirectory(common)
add_subdirectory(sys)
add_subdirectory(db)
add_subdirectory(exception)
add_subdirectory(log)
add_subdirectory(message)
add_subdirectory(session)

include_directories(../include/common)
include_directories(../include/sys)
include_directories(../include/db)
include_directories(../include/exception)
include_directories(../include/log)
include_directories(../include/message)
include_directories(../include/session)

aux_source_directory(common COMMON_SRCS)
aux_source_directory(sys SYS_SRCS)
aux_source_directory(db DB_SRCS)
aux_source_directory(exception EX_SRCS)
aux_source_directory(log LOG_SRCS)
aux_source_directory(message MSG_SRCS)
aux_source_directory(session SESSION_SRCS)

add_library(moth STATIC ${COMMON_SRCS} ${SYS_SRCS})
